# prebextor

./: .gitignore  AUDIT_REPORT.md  CHANGELOG.md  INTEGRATION.md  PLAN-UPDATE.md  PLAN-v2-sprint6.md  PLAN-v2.md  README.md  RESULTS-v3.md  SKILL.md  __init__.py  deploy.sh  plugin.yaml  provider.py  pyproject.toml  tool_extract.py
.archive-v3/: PLAN-v2.md  PLAN.md
.archive-v3/architecture/: blueprint-v1.md
.archive-v3/patches/: manifest.json  web_tools.py.patch
.archive-v3/scripts/: apply-patches.sh  test_comprehensive.py  undeploy.sh
architecture/: blueprint-v2.md
fetcher/: camofox_client.py
pi-extensions/: prebextor.ts
pipeline/: __init__.py  iframe_extractor.py  mapper.py  pruner.py  scorer.py  validator.py
prebextor/: __init__.py  __main__.py  plugin.yaml  provider.py  tool_extract.py  tool_search.py
prebextor/fetcher/: __init__.py  camofox_client.py
prebextor/pipeline/: __init__.py  iframe_extractor.py  mapper.py  pruner.py  qa.py  scorer.py  transform.py  validator.py
prebextor/search/: __init__.py  searxng.py
prebextor/skill_internal/: SKILL.md
research/: camofox_features.md  extraction-pipeline.md  firecrawl_deep_dive.md  hermes_provider_contract_research.md  hermes_skill_plugin_contract.md  hermes_skill_system.md  llm_optimal_formats.md  skill_research.md  web_extract_basics.md  web_search_basics.md
scripts/: deploy.sh  test_patches.py  undeploy.sh  verify.py  verify.py.original
tests/: report_economics.json  report_v102_validation.json  results_comprehensive.json  test_e2e_comprehensive.py  test_e2e_economics.py  test_e2e_extract.py  test_e2e_v101.py  test_envelope_schema.py  test_v101_content_aware.py  validate_Atlanta_Fed_Tracker.txt  validate_Bloomberg_anti-bot_check.txt  validate_CME_FedWatch.txt  validate_CNBC_Economy.txt  validate_Financial_Times.txt  validate_MQL5_Calendar.txt  validate_MacroMicro_Fed.txt  validate_Reuters_Business.txt  validate_TradingEconomics.txt  validate_content.py  validate_v102.py
